--- a/testpage/index.html
+++ b/testpage/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Runner test ground</title>
-  <script src="index.js"></script>
+  <script src="../dist/bundle.js"></script>
 
 <style>
   body {
